<resources>
    <string name="app_name">Habit Tracker</string>

    <!--    Main Activity-->
    <string name="rview_row_main_no_goal">No habit inserted. Start by adding a new habit</string>
    <string name="rview_row_main_no_record">No record inserted. Start by adding a record</string>

    <!--    Add and View Record Activity-->
    <string name="rview_row_add_view_record_value">Value: </string>
    <string name="rview_row_add_record_inputhint">Insert Today Value</string>

    <!--    Add New Goal Dialog Box-->
    <string name="dialog_add_new_goal_title">ADD A NEW HABIT</string>
    <string name="dialog_add_new_goal_goalname">HABIT:</string>
    <string name="dialog_add_new_goal_target">TARGET:</string>
    <string name="dialog_add_new_goal_frequency">FREQUENCY:</string>
    <string name="dialog_add_new_goal_default">DEFAULT FILL:</string>

    <string name="dialog_add_new_goal_freq_daily">Daily</string>
    <string name="dialog_add_new_goal_freq_weekly">Weekly</string>
    <string name="dialog_add_new_goal_freq_monthly">Monthly</string>


    <!--    For Small View Component-->
    <string name="save_button">SAVE</string>

    <!--    Activity_add_record-->
    <string name="activity_add_record_date">Date (DD/MM/YYYY)</string>

<!--    Activity_statistics-->
    <string name="activity_statistics_view_button">View All Records</string>

</resources>