<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    style="@style/dialog">

    <TextView
        style="@style/dialog_title"
        android:text="@string/dialog_add_new_goal_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/dialog_add_new_goal_goalname"
            style="@style/dialog_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/dialog_add_new_goal_goalname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/dialog_add_new_goal_target"
            style="@style/dialog_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <Spinner
                android:id="@+id/dialog_add_new_goal_morethan"
                style="@style/dialog_content" />

            <EditText
                android:id="@+id/dialog_add_new_goal_value"
                android:inputType="number"
                style="@style/dialog_content" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/dialog_add_new_goal_frequency"
            style="@style/dialog_content"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2" >

            <RadioButton
                android:id="@+id/dialog_add_new_goal_daily"
                android:text="@string/dialog_add_new_goal_freq_daily"
                android:button="@null"
                style="@style/dialog_content"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/dialog_add_new_goal_weekly"
                android:text="@string/dialog_add_new_goal_freq_weekly"
                android:button="@null"
                style="@style/dialog_content"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/dialog_add_new_goal_monthly"
                android:text="@string/dialog_add_new_goal_freq_monthly"
                android:button="@null"
                style="@style/dialog_content"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/dialog_add_new_goal_default"
            style="@style/dialog_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/dialog_add_new_goal_default"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <Button
        android:id="@+id/dialog_add_new_goal_saveButton"
        android:text="@string/save_button"
        style="@style/big_button" />

</LinearLayout>